// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-accordion should render with _label="Überschrift" _level=3 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <div class="collapsible kol-accordion" id="accordion-nonce">
      <h3 class="collapsible__heading kol-accordion__heading kol-headline kol-headline--h3 kol-headline--single">
        <div class="collapsible__heading-button kol-accordion__heading-button kol-button kol-button--normal kol-button--standalone">
          <button aria-controls="accordion-control-nonce" aria-expanded="false" class="kol-button__button" id="accordion-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
                <span class="kol-span__label">
                  Überschrift
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </h3>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=false _disabled=false 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <div class="collapsible kol-accordion" id="accordion-nonce">
      <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
        <div class="collapsible__heading-button kol-accordion__heading-button kol-button kol-button--normal kol-button--standalone">
          <button aria-controls="accordion-control-nonce" aria-expanded="false" class="kol-button__button" id="accordion-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
                <span class="kol-span__label">
                  Überschrift
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </strong>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=false _disabled=true 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <div class="collapsible collapsible--disabled kol-accordion" id="accordion-nonce">
      <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
        <div class="collapsible__heading-button kol-accordion__heading-button kol-button kol-button--disabled kol-button--normal kol-button--standalone">
          <button aria-controls="accordion-control-nonce" aria-expanded="false" class="kol-button__button" disabled="" id="accordion-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
                <span class="kol-span__label">
                  Überschrift
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </strong>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=true _disabled=false 1`] = `
<kol-accordion _open="">
  <template shadowrootmode="open">
    <div class="collapsible collapsible--open kol-accordion" id="accordion-nonce">
      <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
        <div class="collapsible__heading-button kol-accordion__heading-button kol-button kol-button--normal kol-button--standalone">
          <button aria-controls="accordion-control-nonce" aria-expanded="true" class="kol-button__button" id="accordion-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-down" role="presentation"></i>
                <span class="kol-span__label">
                  Überschrift
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </strong>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" _open=true _disabled=true 1`] = `
<kol-accordion _open="">
  <template shadowrootmode="open">
    <div class="collapsible collapsible--disabled collapsible--open kol-accordion" id="accordion-nonce">
      <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
        <div class="collapsible__heading-button kol-accordion__heading-button kol-button kol-button--disabled kol-button--normal kol-button--standalone">
          <button aria-controls="accordion-control-nonce" aria-expanded="true" class="kol-button__button" disabled="" id="accordion-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-down" role="presentation"></i>
                <span class="kol-span__label">
                  Überschrift
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </strong>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;

exports[`kol-accordion should render with _label="Überschrift" 1`] = `
<kol-accordion>
  <template shadowrootmode="open">
    <div class="collapsible kol-accordion" id="accordion-nonce">
      <strong class="collapsible__heading kol-accordion__heading kol-headline kol-headline--single kol-headline--strong">
        <div class="collapsible__heading-button kol-accordion__heading-button kol-button kol-button--normal kol-button--standalone">
          <button aria-controls="accordion-control-nonce" aria-expanded="false" class="kol-button__button" id="accordion-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
                <span class="kol-span__label">
                  Überschrift
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </strong>
      <div class="collapsible__wrapper kol-accordion__wrapper">
        <div class="collapsible__wrapper-animation kol-accordion__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="accordion-heading-nonce" class="collapsible__content kol-accordion__content" id="accordion-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-accordion>
`;
